# kube-dump

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  kube-dump  kube-dump.py  pyproject.toml  requirements.txt
chart/: .helmignore  Chart.yaml  README.md  cr.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  cronjob.yaml  pvc.yaml  secret.yaml  serviceaccount.yaml
deploy/: clusterrole.yaml  clusterrolebinding.yaml  cronjob.yaml  kustomization.yaml  pvc.yaml  secret.yaml  serviceaccount.yaml
docs/: local.md
